# wagtail-wtr-350

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  manage.py  package.json  pyproject.toml  render.yaml  tailwind.config.js
.divio/: config.json
project_name/: __init__.py  urls.py  wsgi.py
project_name/forms/: apps.py
project_name/home/: apps.py
project_name/pages/: apps.py
project_name/search/: apps.py  views.py
project_name/settings/: base.py  dev.py  production.py
project_name/tests/: test_urls.py
project_name/users/: apps.py
project_name/wtrx/: apps.py
static_compiled/css/: main.css
static_src/css/: main.css  theme.css
static_src/javascript/: main.js
templates/: 404.html  500.html  base.html  base_page.html
templates/components/: hero.html
templates/navigation/: footer.html  header.html
templates/pages/: content_page.html  form_page.html  index_page.html
templates/search/: search.html
wagtail_wtr/: urls.py
wagtail_wtr/forms/: models.py
wagtail_wtr/home/: models.py
wagtail_wtr/pages/: models.py
wagtail_wtr/settings/: base.py  dev.py  production.py
wagtail_wtr/wtrx/: constants.py  models.py  site_settings.py  wagtail_hooks.py
wtrx/: apps.py  models.py  wagtail_hooks.py
wtrx/blocks/: __init__.py
wtrx/migrations/: 0001_initial.py  0002_alter_contentpage_body_alter_homepage_body_and_more.py
wtrx/templatetags/: wtrx_tags.py
wtrx/tests/: test_blocks.py  test_constants.py  test_create_test_page.py  test_forms.py  test_pages.py  test_search.py  (+4 more)
(+45 files in other folders)
